samples/_failures_safe/1761391369_af2f31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7045ec6.c: In function ‘main’:
./samples/SAFE/__tmp_c7045ec6.c:129:5: error: expected expression at end of input
  129 |     if (scanf("%d", &
      |     ^~
./samples/SAFE/__tmp_c7045ec6.c:129:5: error: expected declaration or statement at end of input
